# nemesis-backend

./: .env  .gitignore  .requirements.hash  Dockerfile  LFR_29df4cf9.csv  LFR_539f246f.csv  LFR_539f246f.json  LFR_b04e61a6.csv  LFR_b04e61a6.json  LFR_test_case_bsc_001.csv  app.py  auto_deploy.py  auto_healer.py  backup_project.py  build.bat  build_local.py  build_nemesis_id.py  build_v32.ps1  case.py  cleanup_project.py  cloudflare_nuke.py  cloudflare_nuke_v2.py  create_architecture.py  deploy_all.py  docker-compose.yml  entities_export.csv  export.jsonl  extract_html.py  fix_darknet.py  godmode_tracer.py  index - Copy.py  index.py  investigate_wallets.py  main.py  ml_clustering.py  nemesis_omega.py  nemesis_v32.py  omni_engineer.py  ontology_seeder.py  organize_project.py  (+25 more)
nemesis_project/: .cfignore  .dev.vars  .gitignore  .wranglerignore  Dockerfile  LFR_zeroShadow_01.csv  README.md  auto_cloudflare.py  auto_deploy.py  build_v32.py  compile_html.py  deploy.py  deploy_enterprise.py  entry.py  find_fetch.py  fix_git.py  generate_report.py  godmode.py  main.py  master_audit_report.html  merge_dashboard.py  nemesis_p.txt  project_cleanup.py  push_req.py  pylock.toml  pyproject.toml  render.yaml  requirements.txt  requirements_edge.txt  restructure.py  setup_bitquery.py  setup_bitquery_v2.py  start_nemesis.py  test_audit.py  test_trace.py  upload_cf_secrets.py  vercel.json  wrangler.toml
nemesis_project/NEMESIS_KNOWLEDGE_BASE_LIBRARY/: CLIENT_INTAKE.txt  PALP.txt  TRACER.txt  TRACING_FUNCTIONS.txt  UGET.txt
nemesis_project/adapters/: bitquery.py  solana.py
(+905 files in other folders)
