[project]
name = "nemesis-backend"
version = "1.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "certifi",
    "google-genai",
    "pydantic",
    "beautifulsoup4",
    "passlib",
    "PyJWT",
    "python-multipart",
    "pandas",
    "numpy",
    "scikit-learn"
]

[dependency-groups]
dev = [
    "workers-py"
]
